<resources>
    <string name="app_name">fanlaisu</string>

    <string name="title_home">Home</string>
    <string name="title_Local">Local</string>
    <string name="title_message">Message</string>
    <string name="title_personal">Personal</string>

    <string name="title">您好 世界</string>
    <string name="account">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="account_title">账号</string>
    <string name="password_title">密码</string>
    <string name="register">注册</string>
    <string name="check">保存</string>
    <string name="main_title">饭来速</string>
    <string name="Login">登录</string>
    <string name="remember">记住密码</string>
    <string name="disremember">忘记密码</string>
    <string name="Login_succeed">登录成功</string>
    <string name="title_activity_main_interface">Main_Interface</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_qr_code">qr_code</string>
</resources>