<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FBFBFB"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:background="@color/blue"
        android:textSize="25dp"
        android:text="@string/main_title"/>

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:src="@drawable/fanlaisu1"

        />



    <LinearLayout

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_title"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/LaccountEdit"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="5"
            android:textColor="@color/teal_700"
            android:hint="@string/account"
            android:background="@drawable/editview_background"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password_title"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/LpasswordEdit"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="5"
            android:textColor="@color/teal_700"
            android:hint="@string/password"

            android:inputType="textPassword"
            android:background="@drawable/editview_background"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/isRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="2dp"
            android:textSize="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/remember"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            />
        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disremember"
            android:textColor="@color/black"
            android:background="#FBF8F8"
            />

    </LinearLayout>
    <Button
        android:layout_marginTop="35dp"
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/Login"
        android:textSize="25dp"
        android:background="#90F8F7"
        />
    <Button

        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/register"
        android:textSize="25dp"
        android:background="#90F8F7"
        />
</LinearLayout>