<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">
    <TextView

        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:background="@color/blue"
        android:textSize="25dp"
        android:text="@string/main_title"/>


    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:src="@drawable/fanlaisu"

        />



    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textColor="@android:color/background_dark"
            android:text="@string/account_title"
            />
        <EditText
            android:background="@drawable/editview_background"
            android:id="@+id/RaccountEdit"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:hint="@string/account"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"
            android:text="ID"
            android:gravity="center"
            />
        <EditText
            android:background="@drawable/editview_background"
            android:id="@+id/RID"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:hint="请输入账号ID"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"
            android:text="手机号码"
            android:gravity="center"
            />
        <EditText
            android:background="@drawable/editview_background"
            android:id="@+id/RPhone"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:hint="请输入手机号码"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"
            android:text="@string/password_title"
            android:gravity="center"
            />
        <EditText
            android:background="@drawable/editview_background"
            android:id="@+id/RpasswordEdit"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="6"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"
            android:text="确认密码"
            android:gravity="center"
            />
        <EditText
            android:background="@drawable/editview_background"
            android:id="@+id/RagainpasswordEdit"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:hint="请再次确认密码"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <LinearLayout

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/rememberpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:textSize="15dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:background="#90F8F7"/>
</LinearLayout>